fix legend style

--- a/component/dw-chart.less
+++ b/component/dw-chart.less
@@ -238,18 +238,22 @@
             float: left;
             position: relative;
             height: 100%;
+            background: #B3CFD0;
+            margin-right: 4px;
 
             > .title
             {
               font-size: 11px;
               color: #61898C;
+              width: 100%;
+              text-align: center;
 
               .centrarVertical;
             }
           }
           > .right
           {
-            width: ~"calc(100% - 72px)";
+            width: ~"calc(100% - 76px)";
             height: 100%;
             float: left;
             background: #B9CBCC;
