--- a/component/templates/dw-chart.html
+++ b/component/templates/dw-chart.html
@@ -3,7 +3,7 @@
     <div class="top">
       <div class="title"><%- title %></div>
     </div>
-    <div class="bottom">
+    <div class="bottom <%= (type == 'barpie')? 'barpie':'' %>">
 
     </div>
 
