fix legend bar style

--- a/component/templates/bar-item.html
+++ b/component/templates/bar-item.html
@@ -1,6 +1,6 @@
 <li class="item bar" data-id="<%- id %>" data-emphasis="<%- emphasis %>">
   <div class="left">
-    <div class="title"><%- title %></div>
+    <div class="title" title="<%- title %>"><%- title %></div>
   </div>
   <div class="right">
     <span class="bar">
